# lua-5.4.7-windows

./: .gitignore  Visual-Studio-Build-Guide.md
lib/: lua.lib  lua54.exp  lua54.lib
src/: CMakeLists.txt
